# EmployeeAssistant-RAG

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/config/: settings.py
app/repositories/: vector_store.py
app/routers/: ingest.py  query.py
app/schemas/: request.py  response.py
app/services/: ingest_service.py  rag_service.py
data/: hr.txt
docs/: employee-assistant-data-flow.drawio  engineering-design.md
src/employee_assistant/: __init__.py  cache.py  chunking.py  cli.py  document_loader.py  graph.py  models.py  retrieval.py  sample_data.py
tests/: test_api_layers.py  test_core.py
